# a2a-cli-llm

./: CLAUDE.md  README.md  __main__.py  config_data1_agent.yaml  debug_communication.py  demo_persona_loading.py  interactive_demo.py  manual_test.py  pyproject.toml  results_focused_test.md  test_agentic_workflow.py  test_bp5.sh  test_communication.py  test_config.yaml  test_config_adios2.yaml  test_config_data1_agent.yaml  test_config_developer.yaml  test_config_teacher.yaml  test_data1_agent.py  test_focused_agentic.py  test_llm_demo.py  test_llm_providers.py  test_parser_prompt.py  validate_system.py
a2a/a2a_docs/: A2A_Protocol_Comprehensive_Guide.md  a2a_python_sdk.md
adios/data/: adios_variables_conversation.md
agent_cards/: scientific_data_analysis.yaml
client/: __init__.py  main.py
docs/: ADIOS2_TOOL_CHAINING_SOLUTION.md  DEVELOPMENT_NOTES.md  PERSONA_SYSTEM.md  README.md  a2a_python_sdk.md  config.yaml  development_prompt.md  test_config.yaml
docs/insights/: A2A_Protocol_Documentation.md  a2a_samples.md  exploration_prompt.md
docs/wiki/: 00-OVERVIEW.md  01-DESIGN-ARCHITECTURE.md  02-SERVER-SETUP.md  04-LLM-PROVIDERS.md  05-LLM-AGENT-CORE.md  06-LLM-AGENT-COGNITIVE.md  07-LLM-AGENT-TOOLS.md  08-MCP-INTEGRATION.md  09-TOOL-CONTEXT.md
examples/: sample.txt  test_commands.md
personas/: adios2_scientist.md  analyst.md  data1_bp_agent.md  default.md  developer.md  teacher.md
server/: __init__.py  main.py
shared/: __init__.py
shared/core/: agent.py  (+10 more)
tests/: __init__.py  test_basic.py  test_llm_providers.py  test_parser_prompt.py  validate_system.py
(+22 files in other folders)
